--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.coditas.ism.dateshowdemo"
+        //applicationId "com.coditas.ism.dateshowdemo"
         minSdk 21
         targetSdk 32
         versionCode 1
